--- a/source/demoCube.html
+++ b/source/demoCube.html
@@ -13,7 +13,7 @@
     <div id="container">
         <button id="plus"> increase Speed</button>
         <button id="minus"> decrease Speed</button>
-        <h1> Score: 0</h1>
+        <h1 id="score" title="0" > Score: 0</h1>
     </div>
     <script type="module" src="./demoCube.js"></script>
 
